--- a/.github/workflows/snake.yml
+++ b/.github/workflows/snake.yml
@@ -4,17 +4,27 @@ on:
   schedule:
     - cron: "0 */12 * * *"  # Runs every 12 hours
   workflow_dispatch:
+  push:
+    branches:
+      - main
+
+permissions:
+  contents: write
 
 jobs:
   build:
     runs-on: ubuntu-latest
     steps:
+      - name: Checkout repository
+        uses: actions/checkout@v3
+
       - name: Generate GitHub Snake Game
         uses: Platane/snk@v3
         with:
-          github_user_name: rishnudk   # your username
-          outputs: dist/github-contribution-grid-snake.svg,
-                   dist/github-contribution-grid-snake-dark.svg
+          github_user_name: rishnudk
+          outputs: |
+            dist/github-contribution-grid-snake.svg
+            dist/github-contribution-grid-snake-dark.svg?palette=github-dark
 
       - name: Push Snake Animation to Output Branch
         uses: crazy-max/ghaction-github-pages@v3.1.0
